Testing Changes Push 3

--- a/pom.xml
+++ b/pom.xml
@@ -19,36 +19,30 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
+    <!-- JUnit 5 Jupiter API -->
+<dependency>
+  <groupId>org.junit.jupiter</groupId>
+  <artifactId>junit-jupiter-api</artifactId>
+  <version>5.7.0</version>
+  <scope>test</scope>
+</dependency>
 
-    <!-- JUnit Jupiter API for writing tests -->
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>5.7.0</version>
-      <scope>test</scope>
-  </dependency>
-  
-  <!-- JUnit Jupiter Engine for running tests -->
-  <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.7.0</version>
-      <scope>test</scope>
-  </dependency>
+<!-- JUnit 5 Jupiter Engine -->
+<dependency>
+  <groupId>org.junit.jupiter</groupId>
+  <artifactId>junit-jupiter-engine</artifactId>
+  <version>5.7.0</version>
+  <scope>test</scope>
+</dependency>
 
-  <!-- (Optional) JUnit Jupiter Params for parameterized tests -->
-  <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-params</artifactId>
-      <version>5.7.0</version>
-      <scope>test</scope>
-  </dependency>
+<!-- JUnit Vintage Engine (if you need to run JUnit 3/4 tests) -->
+<dependency>
+  <groupId>org.junit.vintage</groupId>
+  <artifactId>junit-vintage-engine</artifactId>
+  <version>5.7.0</version>
+  <scope>test</scope>
+</dependency>
+
 
 </dependencies>
 
@@ -69,10 +63,14 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
+          <configuration>
+            <source>8</source>
+            <target>8</target>
+        </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
+          <version>2.22.2</version>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
