--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,41 +3,18 @@ name: Java CI with Maven
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   build:
 
-    print-token:
-      permissions: write-all
-      name: print-token
-      environment: dev
-      # needs: pre-pkr
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Get registration token
-      id: getRegToken
-      run: |
-        curl -X POST -H \"Accept: application/vnd.github.v3+json\"  -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' https://api.github.com/repos/myprofile/myrepo/actions/runners/registration-token
-
+    - uses: actions/checkout@v2
     - name: Set up JDK 11
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
-        java-version: 11
-
+        java-version: '11'
+        distribution: 'adopt'
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    - name: Publish Test Results
-      if: always()
-      uses: dorny/test-reporter@v1
-      with:
-        name: JUnit Test Results
-        path: '**/target/surefire-reports/TEST-*.xml'
-        reporter: java-junit
+      run: mvn clean verify
