--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,21 +12,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
-      with:
-        java-version: 11
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
 
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
 
-    - name: Publish Test Results
-      if: always()
-      uses: dorny/test-reporter@v1
-      with:
-        name: JUnit Test Results
-        path: '**/target/surefire-reports/TEST-*.xml'
-        reporter: junit
+      - name: Run Tests with Maven
+        run: mvn test --file pom.xml
+      
+      - name: Generate Report
+        run: mvn surefire-report:report
