Testing with XML Output 2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,18 @@ jobs:
         with:
           java-version: 11
 
+      - name: Generate Surefire Report
+        run: mvn surefire-report:report
+    
+      - name: Upload Surefire Report
+        uses: actions/upload-artifact@v2
+        with:
+            name: surefire-report
+            path: target/site/surefire-report.html
+      
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
-      - name: Run Tests with Maven
-        run: mvn test --file pom.xml
+  
       
-      - name: Generate Report
-        run: mvn surefire-report:report
+      
